# grab-all-the-fruits-game

./: .gitignore  .gitmodules  README.md
engine/core/: AnimatedSprite.cpp  AnimatedSprite.hpp  BaseDataStructures.h  MapManager.cpp  MapManager.hpp  Sprite.cpp  Sprite.hpp  TileMapMetaTileFactory.hpp  TileMapSprite.cpp  TileMapSprite.hpp  Vector2.h
engine/data/: AnimationData.hpp  DataCacheManager.hpp  LevelData.cpp  LevelData.hpp  TileMapData.cpp  TileMapData.hpp
engine/event/: Event.hpp
engine/platform/: DrawCall.h  PlatformManager.h
engine/utils/: MathUtils.h  StringUtils.h
engine/view/: Game.hpp  View.h  ViewManager.cpp  ViewManager.hpp
grab-all-the-fruits/: README.md
grab-all-the-fruits/assets/characters/masked/: masked.json  masked_animation.json
grab-all-the-fruits/assets/characters/ninja-frog/: ninja-frog.json  ninja-frog_animation.json
grab-all-the-fruits/assets/characters/pink-man/: pink-man_animation.json
grab-all-the-fruits/assets/characters/virtual-guy/: virtual-guy_animation.json
grab-all-the-fruits/assets/levels/: green-zone1.json  level1.json  level1.tiled-session  level2.json  level3.json  levels.json  meta-tileset.tsj
grab-all-the-fruits/assets/objects/: banana_animation.json  collected.json  collected_animation.json  start-level_animation.json
grab-all-the-fruits/assets/objects/animations/: collected_animation.json
grab-all-the-fruits/assets/objects/collectables/: apple.json  apple_animation.json  banana.json  banana_animation.json  cherry.json  cherry_animation.json  kiwi.json  kiwi_animation.json  melon.json  melon_animation.json  orange.json  orange_animation.json  pineapple.json  pineapple_animation.json  strawberry.json  strawberry_animation.json
grab-all-the-fruits/assets/objects/obstacles/: falling-block.json  falling-block_animation.json  fan.json  fan_animation.json  fire.json  fire_animation.json  moving-platform_animation.json  moving_platform.json  rock-head.json  rock-head_animation.json  saw.json  saw_animation.json  spikes.json  spikes_animation.json
grab-all-the-fruits/assets/objects/waypoints/: end-level_animation.json  end.json  start-level_animation.json  start.json
grab-all-the-fruits/osx/: CMakeLists.txt  main.cpp
grab-all-the-fruits/src/characters/: Masked.cpp  Masked.hpp  Player.cpp  Player.hpp
grab-all-the-fruits/src/level/: LevelBackground.cpp  LevelBackground.hpp  LevelManager.cpp  LevelManager.hpp  Map.cpp  Map.hpp
grab-all-the-fruits/src/logic/: Body.hpp  GameConfiguration.h  Map.cpp  Map.hpp  World.cpp  World.hpp
grab-all-the-fruits/src/objects/: AnimatedObject.cpp  AnimatedObject.hpp  AnimatedObjectsFactory.cpp  AnimatedObjectsFactory.hpp  DisappearingAnimation.cpp  DisappearingAnimation.hpp  FruitAnimatedObject.cpp  FruitAnimatedObject.hpp  GameObject.hpp  GroundObject.cpp  GroundObject.hpp  PhysicalAnimatedObject.cpp  PhysicalAnimatedObject.hpp  Player.cpp  Player.hpp  WaypointAnimatedObject.cpp  WaypointAnimatedObject.hpp
grab-all-the-fruits/src/objects/obstacles/: FallingBlockObstacle.cpp  FallingBlockObstacle.hpp  FireObstacle.cpp  FireObstacle.hpp  MovingPlatform.cpp  MovingPlatform.hpp  RockHeadObstacle.cpp  RockHeadObstacle.hpp  SawObstacle.cpp  SawObstacle.hpp  SpikesObstacle.cpp  SpikesObstacle.hpp  StationaryObstacle.cpp  StationaryObstacle.hpp
grab-all-the-fruits/src/physics/: PhysicsBody.hpp  PhysicsOnCollideListener.hpp  PhysicsSystem.hpp
grab-all-the-fruits/src/physics/box2d/: Box2dDebugRenderer.cpp  Box2dDebugRenderer.hpp  Box2dPhysicsBody.cpp  Box2dPhysicsBody.hpp  Box2dPhysicsSystem.cpp  Box2dPhysicsSystem.hpp
grab-all-the-fruits/src/ui/: ButtonClickListener.hpp  HUD.cpp  HUD.hpp  IconDefs.h  ImageButton.cpp  ImageButton.hpp  MainMenu.cpp  MainMenu.hpp
grab-all-the-fruits/src/views/: ContinueGameView.cpp  ContinueGameView.hpp  EndGameView.cpp  EndGameView.hpp  GameView.cpp  GameView.hpp  GrabAllTheFruitsGame.cpp  GrabAllTheFruitsGame.hpp  MainMenuView.cpp  MainMenuView.hpp  NewGameView.cpp  NewGameView.hpp
sample-game/osx/: CMakeLists.txt  README.md  main.cpp
sample-game/src/characters/: Masked.cpp  Masked.hpp
sample-game/src/views/: GameView.cpp  GameView.hpp
sdl/: LTexture.cpp  LTexture.hpp  SDLGame.cpp  SDLGame.hpp  SDLManager.cpp  SDLManager.hpp
tools/: README.md  atlas_generator.py  crop_sprites_from_atlas.py
